[gd_scene load_steps=84 format=3 uid="uid://ihlplcqwo6h1"]

[ext_resource type="Script" uid="uid://d34cgmcfq5gk5" path="res://scripts/player.gd" id="1_y8853"]
[ext_resource type="Texture2D" uid="uid://6qrxrjtcvujc" path="res://assets/team_assets/donald/donald_strike_FB.png" id="2_b5jet"]
[ext_resource type="Texture2D" uid="uid://bd7qve5rf6u3f" path="res://assets/team_assets/donald/Swing-Sheet.png" id="3_b5jet"]
[ext_resource type="Texture2D" uid="uid://dmehp21mq4ejn" path="res://assets/Top_Down_Adventure_Pack_v.1.0/Top_Down_Adventure_Pack_v.1.0/Char_Sprites/char_death_all_dir_anim_strip_10.png" id="3_suug4"]
[ext_resource type="Texture2D" uid="uid://bti3phuahc3o7" path="res://assets/team_assets/donald/Swing-Sheet_right.png" id="4_suug4"]
[ext_resource type="Texture2D" uid="uid://btd2wy0uadikr" path="res://assets/Top_Down_Adventure_Pack_v.1.0/Top_Down_Adventure_Pack_v.1.0/Char_Sprites/char_spritesheet.png" id="4_xafhu"]
[ext_resource type="Texture2D" uid="uid://dmqii2njucgrr" path="res://assets/team_assets/donald/Walk_Left-Sheet.png" id="6_y8853"]
[ext_resource type="Texture2D" uid="uid://fi5gtjkuuj8t" path="res://assets/team_assets/donald/Walk_right-Sheet.png" id="7_b5jet"]
[ext_resource type="Texture2D" uid="uid://dkcd3bah3d4i4" path="res://assets/team_assets/donald/donald_walk_FB.png" id="7_xafhu"]
[ext_resource type="AudioStream" uid="uid://c2jx6yo4qskwg" path="res://assets/sound/retro-hurt-1-236672(1).mp3" id="9_81sn1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b88gh"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 0, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpibs"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 64, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck3xl"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 128, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vshwm"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 192, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao8iv"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 256, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrlgj"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 320, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwk30"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 384, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mq8c"]
atlas = ExtResource("2_b5jet")
region = Rect2(0, 448, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ohfr"]
atlas = ExtResource("3_b5jet")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_55uab"]
atlas = ExtResource("3_b5jet")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr73l"]
atlas = ExtResource("3_b5jet")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wrcf"]
atlas = ExtResource("3_b5jet")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6m7"]
atlas = ExtResource("3_b5jet")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aod30"]
atlas = ExtResource("3_b5jet")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8v1f"]
atlas = ExtResource("3_b5jet")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5jet"]
atlas = ExtResource("4_suug4")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_51nii"]
atlas = ExtResource("4_suug4")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_567yd"]
atlas = ExtResource("4_suug4")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2phv"]
atlas = ExtResource("4_suug4")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgstb"]
atlas = ExtResource("4_suug4")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0swi"]
atlas = ExtResource("4_suug4")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_doiim"]
atlas = ExtResource("4_suug4")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikqyq"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 0, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vs2j"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 64, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqalk"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 128, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sulxx"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 192, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfj0r"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 256, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p661k"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 320, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lre24"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 384, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1kde"]
atlas = ExtResource("2_b5jet")
region = Rect2(58, 448, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6hcc"]
atlas = ExtResource("3_suug4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykxdk"]
atlas = ExtResource("3_suug4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmjn5"]
atlas = ExtResource("3_suug4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uptv"]
atlas = ExtResource("3_suug4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrbpt"]
atlas = ExtResource("3_suug4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kchu1"]
atlas = ExtResource("3_suug4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tgdo"]
atlas = ExtResource("3_suug4")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mybes"]
atlas = ExtResource("3_suug4")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_03xlx"]
atlas = ExtResource("3_suug4")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey2bx"]
atlas = ExtResource("3_suug4")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owne0"]
atlas = ExtResource("4_xafhu")
region = Rect2(309, 92, 103, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_cni6o"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 0, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cver8"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 64, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07vqr"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 128, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ayem"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 192, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i61wy"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 256, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uyg6"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 320, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxgn6"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 384, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdmoj"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 448, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y2pg"]
atlas = ExtResource("7_xafhu")
region = Rect2(0, 512, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_suug4"]
atlas = ExtResource("6_y8853")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xafhu"]
atlas = ExtResource("6_y8853")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuqu4"]
atlas = ExtResource("6_y8853")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcen8"]
atlas = ExtResource("6_y8853")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhov5"]
atlas = ExtResource("6_y8853")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r75wm"]
atlas = ExtResource("7_b5jet")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_81sn1"]
atlas = ExtResource("7_b5jet")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhu0l"]
atlas = ExtResource("7_b5jet")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b62a"]
atlas = ExtResource("7_b5jet")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq4iq"]
atlas = ExtResource("7_b5jet")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q0s7"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 0, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x2ak"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 64, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vfop"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 128, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrdn1"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 192, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdqw7"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 256, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lob4"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 320, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttgh0"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 384, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58l65"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 448, 58, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq84j"]
atlas = ExtResource("7_xafhu")
region = Rect2(58, 512, 58, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2t73j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpibs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck3xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vshwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao8iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrlgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwk30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mq8c")
}],
"loop": true,
"name": &"attack_down",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ohfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55uab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr73l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wrcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aod30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8v1f")
}],
"loop": true,
"name": &"attack_left",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5jet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51nii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_567yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2phv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgstb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0swi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doiim")
}],
"loop": true,
"name": &"attack_right",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikqyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vs2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqalk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sulxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfj0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p661k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lre24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1kde")
}],
"loop": true,
"name": &"attack_up",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6hcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykxdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmjn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uptv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrbpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kchu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tgdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mybes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03xlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey2bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owne0")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cni6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cver8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07vqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ayem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i61wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uyg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxgn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdmoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y2pg")
}],
"loop": true,
"name": &"move_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suug4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xafhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuqu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcen8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhov5")
}],
"loop": true,
"name": &"move_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r75wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81sn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhu0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b62a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq4iq")
}],
"loop": true,
"name": &"move_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q0s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x2ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vfop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrdn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdqw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lob4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttgh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58l65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq84j")
}],
"loop": true,
"name": &"move_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv0ly"]
size = Vector2(8, 8.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nso6f"]
size = Vector2(7.74993, 23.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bggmf"]
size = Vector2(17, 21)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_y8853")
speed = 150

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6.03995)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2t73j")
animation = &"attack_up"
frame_progress = 0.935045

[node name="wall_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -3)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_dv0ly")

[node name="short_attack_Area2D" type="Area2D" parent="."]
visible = false
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 4

[node name="slice" type="AudioStreamPlayer" parent="short_attack_Area2D"]
stream = ExtResource("9_81sn1")

[node name="short_attack_hitbox" type="CollisionShape2D" parent="short_attack_Area2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_nso6f")

[node name="attack_timer" type="Timer" parent="short_attack_Area2D"]

[node name="death_collision" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_collision"]
position = Vector2(0.5, -4.5)
shape = SubResource("RectangleShape2D_bggmf")

[connection signal="body_entered" from="short_attack_Area2D" to="." method="_on_short_attack_area_2d_body_entered"]
[connection signal="timeout" from="short_attack_Area2D/attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="death_collision" to="." method="_on_death_collision_area_entered"]
